Revert "[fix] 매입 이력 알람 리스너 문제 해결 (#438)"
This reverts commit 27ec6d8fd85d5d6ff02a6528b252fe7942c28fb0.